--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root{ /* tag root para aplicar em toda a página */
+    font-family: "Alice", serif;
+line-height: 150%;
+
+}
 body {
     background-image: url(assets/background.jpg);
     background-size: cover;
@@ -14,4 +19,21 @@ body {
 
 img {
     border-radius: 16px;
+}
+
+h1 {
+    font-size: 40px;
+    line-height: 140%;
+}
+
+h2 {
+    font-size: 24px;
+}
+
+h1,h2 {
+    color: #291B1A;
+}
+
+p {
+    color: #573A37;
 }
